src/test/ui/const-generics/issues/issue-68977.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-68977.rs:29:17
   |
LL |     PhantomU8<{(INT_BITS + FRAC_BITS + 7) / 8}>;
   |                 ^^^^^^^^ non-trivial anonymous constants must not depend on the parameter `INT_BITS`
   |
   = help: it is currently only allowed to use either `INT_BITS` or `{ INT_BITS }` as generic constants

error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-68977.rs:29:28
   |
LL |     PhantomU8<{(INT_BITS + FRAC_BITS + 7) / 8}>;
   |                            ^^^^^^^^^ non-trivial anonymous constants must not depend on the parameter `FRAC_BITS`
   |
   = help: it is currently only allowed to use either `FRAC_BITS` or `{ FRAC_BITS }` as generic constants

error: aborting due to 2 previous errors

